feat:  will implement the option to see the list fix: class method error fixed     Now we can see our list of records during app runtime BREAKING CHANGE!: New option in menu  On branch main  Changes to be committed: 	modified:   changelog.txt 	modified:   interface.rb 	modified:   menu.rb

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,7 @@
 05/08/2023 - Project Created
 		*Task: Fix to_rg class method in interface.rb
+
+06/08/2023 - Task completed: to_rg class method fixed
+				Fixed: User data entry methods
+				New: Registers list implemented, now we can see our registration during app runtime
+
