--- a/changelog.txt
+++ b/changelog.txt
@@ -3,5 +3,5 @@
 
 06/08/2023 - Task completed: to_rg class method fixed
 				Fixed: User data entry methods
-				New: Registers list implemented, now we can see our registration during app runtime
+				New: Records list implemented, now we can see our registrations during app runtime
 
